// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`email conformance — every sample type shares the shell contract > digest > matches its committed snapshot 1`] = `
"<!DOCTYPE html>
<html>
<head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head>
<body style="margin:0;padding:0;background:#f8fafc;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f8fafc;padding:32px 0;">
    <tbody><tr><td align="center">
      <table role="presentation" width="560" cellpadding="0" cellspacing="0" style="max-width:560px;width:100%;">
        <tbody>
          <tr><td style="padding:0 20px 18px;">
            
  <div style="margin-bottom:4px;font-size:18px;font-weight:800;letter-spacing:-0.02em;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;">
    <span style="color:#1e3a5f;">Floor</span><span style="color:#f59e0b;">Vote</span>
  </div>

            <p style="margin:0;font-size:12px;font-weight:600;color:#5e697d;">Rhode Island Association of Local Election Officials</p>
            <p style="margin:18px 0 0;font-size:18px;font-weight:700;color:#0f172a;line-height:1.35;">2 priority bills were updated in the last week</p>
            <p class="email-date" style="margin:2px 0 0;font-size:12px;color:#667386;">Jun 9 – Jun 11</p>
          </td></tr>
          <tr><td style="padding:6px 20px 28px;">
            
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="margin-bottom:18px;border:1px solid #e2e8f0;border-radius:8px;overflow:hidden;">
  <tbody>
    <tr><td style="padding:12px 14px 4px 14px;background:#f8fafc;font-size:14px;font-weight:700;color:#0f172a;">New bills matching your keywords</td></tr>
    <tr><td style="padding:0 14px 6px 14px;background:#f8fafc;font-size:10px;color:#5e697d;">Set a priority or dismiss each from the bill list.</td></tr>
    <tr><td style="padding:0 14px 8px 14px;">
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0"><tbody><tr>
      <td style="padding:8px 0;border-top:1px solid #e2e8f0;">
        <a href="https://sample.test/RI/2026/HB 1602" style="text-decoration:none;">
          <span style="display:inline-block;background:#1e3a5f;color:#fff;font-size:12px;font-weight:700;padding:3px 10px;border-radius:4px;letter-spacing:0.02em;">RI HB 1602</span>
          <span style="color:#0f172a;font-size:12px;font-family:'Source Serif 4', Georgia, serif;margin-left:8px;">Automatic voter registration at the DMV</span>
        </a>
      </td>
    </tr>
<tr>
      <td style="padding:8px 0;border-top:1px solid #e2e8f0;">
        <a href="https://sample.test/RI/2026/S 0712" style="text-decoration:none;">
          <span style="display:inline-block;background:#1e3a5f;color:#fff;font-size:12px;font-weight:700;padding:3px 10px;border-radius:4px;letter-spacing:0.02em;">RI S 0712</span>
          <span style="color:#0f172a;font-size:12px;font-family:'Source Serif 4', Georgia, serif;margin-left:8px;">Ranked-choice voting for municipal elections</span>
        </a>
      </td>
    </tr>
<tr>
      <td style="padding:8px 0;border-top:1px solid #e2e8f0;">
        <a href="https://sample.test/RI/2026/HB 1455" style="text-decoration:none;">
          <span style="display:inline-block;background:#1e3a5f;color:#fff;font-size:12px;font-weight:700;padding:3px 10px;border-radius:4px;letter-spacing:0.02em;">RI HB 1455</span>
          <span style="color:#0f172a;font-size:12px;font-family:'Source Serif 4', Georgia, serif;margin-left:8px;">Poll worker compensation increase</span>
        </a>
      </td>
    </tr></tbody></table>
    </td></tr>
  </tbody>
</table>

<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#fff;margin-bottom:8px;border-radius:8px;overflow:hidden;border:1px solid #e2e8f0;box-shadow:0 1px 3px rgba(0,0,0,0.04);">
  <tbody>
    <tr style="background:#f8fafc;">
      <td colspan="3" style="padding:12px 14px 8px 14px;">
        <table role="presentation" width="100%" cellpadding="0" cellspacing="0"><tbody><tr>
          <td align="left" style="vertical-align:middle;"><a href="https://sample.test/RI/2026/HB 1234" style="color:inherit;text-decoration:none;"><span style="display:inline-block;background:#1e3a5f;color:#fff;font-size:12px;font-weight:700;padding:3px 10px;border-radius:4px;letter-spacing:0.02em;">RI HB 1234</span></a></td>
          <td align="right" style="vertical-align:middle;"><span style="display:inline-block;background:#850028;color:#fff;font-size:12px;font-weight:600;padding:3px 10px;border-radius:4px;white-space:nowrap;">High priority</span></td>
        </tr></tbody></table>
      </td>
    </tr>
    <tr style="background:#f8fafc;">
      <td colspan="3" style="padding:2px 14px 4px 14px;font-family:'Source Serif 4', Georgia, serif;font-size:14px;color:#0f172a;font-weight:700;line-height:1.35;"><a href="https://sample.test/RI/2026/HB 1234" style="color:inherit;text-decoration:none;">Voter ID Act</a></td>
    </tr>
    <tr style="background:#f8fafc;"><td colspan="3" style="padding:0 14px 10px 14px;font-size:12px;color:#5e697d;font-family:'Source Serif 4', Georgia, serif;line-height:1.45;"><a href="https://sample.test/RI/2026/HB 1234" style="color:inherit;text-decoration:none;">Requires photo identification to vote in person and by mail, with free IDs issued by the state.</a></td></tr>
    <tr style="background:#fff;">
      <td width="30" style="padding:9px 0 8px 14px;vertical-align:top;border-top:1px solid #e2e8f0;"><span title="High priority" style="display:inline-block;width:11px;height:11px;border-radius:2px;background:#850028;vertical-align:middle;"></span></td>
      <td style="width:100%;padding:8px 8px 8px 6px;font-size:12px;color:#475569;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;line-height:1.4;border-top:1px solid #e2e8f0;"><a href="https://sample.test/RI/2026/HB 1234" style="color:inherit;text-decoration:none;">Marked high priority by Dana Reed</a></td>
      <td align="right" style="padding:8px 14px 8px 0;font-size:12px;color:#667386;white-space:nowrap;vertical-align:top;border-top:1px solid #e2e8f0;">Jun 9</td>
    </tr>
<tr style="background:#f8fafc;">
      <td width="30" style="padding:9px 0 8px 14px;vertical-align:top;border-top:1px solid #e2e8f0;"><img src="https://sample.test/email-icons/arrow_forward__5e697d.png" width="14" height="14" alt="" style="display:block;border:0;"></td>
      <td style="width:100%;padding:8px 8px 8px 6px;font-size:12px;color:#475569;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;line-height:1.4;border-top:1px solid #e2e8f0;"><a href="https://sample.test/RI/2026/HB 1234#section-actions" style="color:inherit;text-decoration:none;">Action: Passed House committee</a></td>
      <td align="right" style="padding:8px 14px 8px 0;font-size:12px;color:#667386;white-space:nowrap;vertical-align:top;border-top:1px solid #e2e8f0;">Jun 10</td>
    </tr>
<tr style="background:#fff;">
      <td width="30" style="padding:9px 0 8px 14px;vertical-align:top;border-top:1px solid #e2e8f0;"><img src="https://sample.test/email-icons/chat__7c3aed.png" width="14" height="14" alt="" style="display:block;border:0;"></td>
      <td style="width:100%;padding:8px 8px 8px 6px;font-size:12px;color:#475569;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;line-height:1.4;border-top:1px solid #e2e8f0;"><a href="https://sample.test/RI/2026/HB 1234" style="color:inherit;text-decoration:none;">Sam Ortiz: &quot;We should testify against this at the hearing.&quot;</a></td>
      <td align="right" style="padding:8px 14px 8px 0;font-size:12px;color:#667386;white-space:nowrap;vertical-align:top;border-top:1px solid #e2e8f0;">Jun 10</td>
    </tr>
  </tbody>
</table>

<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#fff;margin-bottom:8px;border-radius:8px;overflow:hidden;border:1px solid #e2e8f0;box-shadow:0 1px 3px rgba(0,0,0,0.04);">
  <tbody>
    <tr style="background:#f8fafc;">
      <td colspan="3" style="padding:12px 14px 8px 14px;">
        <table role="presentation" width="100%" cellpadding="0" cellspacing="0"><tbody><tr>
          <td align="left" style="vertical-align:middle;"><a href="https://sample.test/RI/2026/S 0456" style="color:inherit;text-decoration:none;"><span style="display:inline-block;background:#1e3a5f;color:#fff;font-size:12px;font-weight:700;padding:3px 10px;border-radius:4px;letter-spacing:0.02em;">RI S 0456</span></a></td>
          <td align="right" style="vertical-align:middle;"><span style="display:inline-block;background:#be2342;color:#fff;font-size:12px;font-weight:600;padding:3px 10px;border-radius:4px;white-space:nowrap;">Medium priority</span></td>
        </tr></tbody></table>
      </td>
    </tr>
    <tr style="background:#f8fafc;">
      <td colspan="3" style="padding:2px 14px 4px 14px;font-family:'Source Serif 4', Georgia, serif;font-size:14px;color:#0f172a;font-weight:700;line-height:1.35;"><a href="https://sample.test/RI/2026/S 0456" style="color:inherit;text-decoration:none;">Mail Ballot Drop Boxes</a></td>
    </tr>
    <tr style="background:#f8fafc;"><td colspan="3" style="padding:0 14px 10px 14px;font-size:12px;color:#5e697d;font-family:'Source Serif 4', Georgia, serif;line-height:1.45;"><a href="https://sample.test/RI/2026/S 0456" style="color:inherit;text-decoration:none;">Authorizes secure 24-hour drop boxes in every municipality and sets chain-of-custody rules.</a></td></tr>
    <tr style="background:#fff;">
      <td width="30" style="padding:9px 0 8px 14px;vertical-align:top;border-top:1px solid #e2e8f0;"><img src="https://sample.test/email-icons/thumbs_up_down__dc2626-fill.png" width="14" height="14" alt="" style="display:block;border:0;"></td>
      <td style="width:100%;padding:8px 8px 8px 6px;font-size:12px;color:#475569;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;line-height:1.4;border-top:1px solid #e2e8f0;"><a href="https://sample.test/RI/2026/S 0456" style="color:inherit;text-decoration:none;">Position set to Oppose by Dana Reed</a></td>
      <td align="right" style="padding:8px 14px 8px 0;font-size:12px;color:#667386;white-space:nowrap;vertical-align:top;border-top:1px solid #e2e8f0;">Jun 10</td>
    </tr>
  </tbody>
</table>
            <div style="margin-top:18px;"><a href="https://sample.test/bills" style="display:inline-block;background:#3b82f6;color:#fff;text-decoration:none;font-size:14px;font-weight:600;padding:12px 24px;border-radius:6px;">View bill updates</a></div>
          </td></tr>
          <tr><td style="padding:22px 20px 4px;border-top:1px solid #e2e8f0;text-align:center;">
            <a href="https://sample.test/profile#setting-email-digest" style="font-size:12px;color:#667386;text-decoration:underline;">Manage email settings</a>
          </td></tr>
        </tbody>
      </table>
    </td></tr></tbody>
  </table>
</body>
</html>"
`;

exports[`email conformance — every sample type shares the shell contract > digest-new-only > matches its committed snapshot 1`] = `
"<!DOCTYPE html>
<html>
<head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head>
<body style="margin:0;padding:0;background:#f8fafc;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f8fafc;padding:32px 0;">
    <tbody><tr><td align="center">
      <table role="presentation" width="560" cellpadding="0" cellspacing="0" style="max-width:560px;width:100%;">
        <tbody>
          <tr><td style="padding:0 20px 18px;">
            
  <div style="margin-bottom:4px;font-size:18px;font-weight:800;letter-spacing:-0.02em;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;">
    <span style="color:#1e3a5f;">Floor</span><span style="color:#f59e0b;">Vote</span>
  </div>

            <p style="margin:0;font-size:12px;font-weight:600;color:#5e697d;">Rhode Island Association of Local Election Officials</p>
            <p style="margin:18px 0 0;font-size:18px;font-weight:700;color:#0f172a;line-height:1.35;">3 new keyword matches</p>
            <p class="email-date" style="margin:2px 0 0;font-size:12px;color:#667386;">Jun 9 – Jun 11</p>
          </td></tr>
          <tr><td style="padding:6px 20px 28px;">
            
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="margin-bottom:18px;border:1px solid #e2e8f0;border-radius:8px;overflow:hidden;">
  <tbody>
    <tr><td style="padding:12px 14px 4px 14px;background:#f8fafc;font-size:14px;font-weight:700;color:#0f172a;">New bills matching your keywords</td></tr>
    <tr><td style="padding:0 14px 6px 14px;background:#f8fafc;font-size:10px;color:#5e697d;">Set a priority or dismiss each from the bill list.</td></tr>
    <tr><td style="padding:0 14px 8px 14px;">
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0"><tbody><tr>
      <td style="padding:8px 0;border-top:1px solid #e2e8f0;">
        <a href="https://sample.test/RI/2026/HB 1602" style="text-decoration:none;">
          <span style="display:inline-block;background:#1e3a5f;color:#fff;font-size:12px;font-weight:700;padding:3px 10px;border-radius:4px;letter-spacing:0.02em;">RI HB 1602</span>
          <span style="color:#0f172a;font-size:12px;font-family:'Source Serif 4', Georgia, serif;margin-left:8px;">Automatic voter registration at the DMV</span>
        </a>
      </td>
    </tr>
<tr>
      <td style="padding:8px 0;border-top:1px solid #e2e8f0;">
        <a href="https://sample.test/RI/2026/S 0712" style="text-decoration:none;">
          <span style="display:inline-block;background:#1e3a5f;color:#fff;font-size:12px;font-weight:700;padding:3px 10px;border-radius:4px;letter-spacing:0.02em;">RI S 0712</span>
          <span style="color:#0f172a;font-size:12px;font-family:'Source Serif 4', Georgia, serif;margin-left:8px;">Ranked-choice voting for municipal elections</span>
        </a>
      </td>
    </tr>
<tr>
      <td style="padding:8px 0;border-top:1px solid #e2e8f0;">
        <a href="https://sample.test/RI/2026/HB 1455" style="text-decoration:none;">
          <span style="display:inline-block;background:#1e3a5f;color:#fff;font-size:12px;font-weight:700;padding:3px 10px;border-radius:4px;letter-spacing:0.02em;">RI HB 1455</span>
          <span style="color:#0f172a;font-size:12px;font-family:'Source Serif 4', Georgia, serif;margin-left:8px;">Poll worker compensation increase</span>
        </a>
      </td>
    </tr></tbody></table>
    </td></tr>
  </tbody>
</table>

            <div style="margin-top:18px;"><a href="https://sample.test/bills?newMatches=1" style="display:inline-block;background:#3b82f6;color:#fff;text-decoration:none;font-size:14px;font-weight:600;padding:12px 24px;border-radius:6px;">View newly matched bills</a></div>
          </td></tr>
          <tr><td style="padding:22px 20px 4px;border-top:1px solid #e2e8f0;text-align:center;">
            <a href="https://sample.test/profile#setting-email-digest" style="font-size:12px;color:#667386;text-decoration:underline;">Manage email settings</a>
          </td></tr>
        </tbody>
      </table>
    </td></tr></tbody>
  </table>
</body>
</html>"
`;

exports[`email conformance — every sample type shares the shell contract > invite > matches its committed snapshot 1`] = `
"<!DOCTYPE html>
<html>
<head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head>
<body style="margin:0;padding:0;background:#f8fafc;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f8fafc;padding:32px 0;">
    <tbody><tr><td align="center">
      <table role="presentation" width="560" cellpadding="0" cellspacing="0" style="max-width:560px;width:100%;">
        <tbody>
          <tr><td style="padding:0 20px 18px;">
            
  <div style="margin-bottom:4px;font-size:18px;font-weight:800;letter-spacing:-0.02em;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;">
    <span style="color:#1e3a5f;">Floor</span><span style="color:#f59e0b;">Vote</span>
  </div>

            <p style="margin:0;font-size:12px;font-weight:600;color:#5e697d;">Rhode Island Association of Local Election Officials</p>
            <p style="margin:18px 0 0;font-size:18px;font-weight:700;color:#0f172a;line-height:1.35;">You've been invited</p>
            
          </td></tr>
          <tr><td style="padding:6px 20px 28px;">
            <p style="margin:0;font-size:14px;line-height:1.6;color:#374151;">You've been added to Rhode Island Association of Local Election Officials on FloorVote, a legislative tracking tool. Click below to set up your account. This link expires in 7 days and can only be used once. You can also <a href="https://sample.test" style="color: #2563eb;">request a new sign-in link</a> anytime using this email address.</p>
            <div style="margin-top:18px;"><a href="https://sample.test/login?token=sample-link-not-functional" style="display:inline-block;background:#3b82f6;color:#fff;text-decoration:none;font-size:14px;font-weight:600;padding:12px 24px;border-radius:6px;">Accept your invitation</a></div>
          </td></tr>
          <tr><td style="padding:22px 20px 4px;border-top:1px solid #e2e8f0;text-align:center;">
            If you didn't expect this email, you can safely ignore it.<br><a href="https://sample.test" style="font-size:12px;color:#667386;text-decoration:underline;">FloorVote</a>
          </td></tr>
        </tbody>
      </table>
    </td></tr></tbody>
  </table>
</body>
</html>"
`;

exports[`email conformance — every sample type shares the shell contract > login > matches its committed snapshot 1`] = `
"<!DOCTYPE html>
<html>
<head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head>
<body style="margin:0;padding:0;background:#f8fafc;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f8fafc;padding:32px 0;">
    <tbody><tr><td align="center">
      <table role="presentation" width="560" cellpadding="0" cellspacing="0" style="max-width:560px;width:100%;">
        <tbody>
          <tr><td style="padding:0 20px 18px;">
            
  <div style="margin-bottom:4px;font-size:18px;font-weight:800;letter-spacing:-0.02em;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;">
    <span style="color:#1e3a5f;">Floor</span><span style="color:#f59e0b;">Vote</span>
  </div>

            <p style="margin:0;font-size:12px;font-weight:600;color:#5e697d;">Rhode Island Association of Local Election Officials</p>
            <p style="margin:18px 0 0;font-size:18px;font-weight:700;color:#0f172a;line-height:1.35;">Sign in to FloorVote</p>
            
          </td></tr>
          <tr><td style="padding:6px 20px 28px;">
            <p style="margin:0;font-size:14px;line-height:1.6;color:#374151;">You requested a sign-in link. Click the button below to access your account. This link expires in 1 hour and can only be used once.</p>
            <div style="margin-top:18px;"><a href="https://sample.test/login?token=sample-link-not-functional" style="display:inline-block;background:#3b82f6;color:#fff;text-decoration:none;font-size:14px;font-weight:600;padding:12px 24px;border-radius:6px;">Sign in to FloorVote</a></div>
          </td></tr>
          <tr><td style="padding:22px 20px 4px;border-top:1px solid #e2e8f0;text-align:center;">
            If you didn't expect this email, you can safely ignore it.<br><a href="https://sample.test" style="font-size:12px;color:#667386;text-decoration:underline;">FloorVote</a>
          </td></tr>
        </tbody>
      </table>
    </td></tr></tbody>
  </table>
</body>
</html>"
`;

exports[`email conformance — every sample type shares the shell contract > mention > matches its committed snapshot 1`] = `
"<!DOCTYPE html>
<html>
<head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head>
<body style="margin:0;padding:0;background:#f8fafc;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f8fafc;padding:32px 0;">
    <tbody><tr><td align="center">
      <table role="presentation" width="560" cellpadding="0" cellspacing="0" style="max-width:560px;width:100%;">
        <tbody>
          <tr><td style="padding:0 20px 18px;">
            
  <div style="margin-bottom:4px;font-size:18px;font-weight:800;letter-spacing:-0.02em;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;">
    <span style="color:#1e3a5f;">Floor</span><span style="color:#f59e0b;">Vote</span>
  </div>

            <p style="margin:0;font-size:12px;font-weight:600;color:#5e697d;">Rhode Island Association of Local Election Officials</p>
            <p style="margin:18px 0 0;font-size:18px;font-weight:700;color:#0f172a;line-height:1.35;"><strong style="font-weight:600;">Sam Ortiz</strong> mentioned you in a comment</p>
            <p class="email-date" style="margin:2px 0 0;font-size:12px;color:#667386;">June 10, 2026 at 4:45 PM</p>
          </td></tr>
          <tr><td style="padding:6px 20px 28px;">
            
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#fff;margin-bottom:8px;border-radius:8px;overflow:hidden;border:1px solid #e2e8f0;box-shadow:0 1px 3px rgba(0,0,0,0.04);">
  <tbody>
    <tr style="background:#f8fafc;">
      <td colspan="3" style="padding:12px 14px 8px 14px;">
        <table role="presentation" width="100%" cellpadding="0" cellspacing="0"><tbody><tr>
          <td align="left" style="vertical-align:middle;"><a href="https://sample.test/RI/2026/HB 1234" style="color:inherit;text-decoration:none;"><span style="display:inline-block;background:#1e3a5f;color:#fff;font-size:12px;font-weight:700;padding:3px 10px;border-radius:4px;letter-spacing:0.02em;">RI HB 1234</span></a></td>
          <td align="right" style="vertical-align:middle;"><span style="display:inline-block;background:#850028;color:#fff;font-size:12px;font-weight:600;padding:3px 10px;border-radius:4px;white-space:nowrap;">High priority</span></td>
        </tr></tbody></table>
      </td>
    </tr>
    <tr style="background:#f8fafc;">
      <td colspan="3" style="padding:2px 14px 4px 14px;font-family:'Source Serif 4', Georgia, serif;font-size:14px;color:#0f172a;font-weight:700;line-height:1.35;"><a href="https://sample.test/RI/2026/HB 1234" style="color:inherit;text-decoration:none;">Voter ID Act</a></td>
    </tr>
    <tr style="background:#f8fafc;"><td colspan="3" style="padding:0 14px 10px 14px;font-size:12px;color:#5e697d;font-family:'Source Serif 4', Georgia, serif;line-height:1.45;"><a href="https://sample.test/RI/2026/HB 1234" style="color:inherit;text-decoration:none;">Requires photo identification to vote in person and by mail, with free IDs issued by the state.</a></td></tr>
    <tr style="background:#fff;">
      <td width="30" style="padding:11px 0 0 14px;vertical-align:top;border-top:1px solid #e2e8f0;"><img src="https://sample.test/email-icons/chat__7c3aed.png" width="14" height="14" alt="" style="display:block;border:0;"></td>
      <td style="width:100%;padding:10px 8px 0 6px;vertical-align:top;border-top:1px solid #e2e8f0;"><span style="font-size:12px;font-weight:600;color:#0f172a;">Sam Ortiz</span><span style="font-size:12px;font-weight:400;color:#667386;margin-left:4px;">Town Clerk, Cranston</span></td>
      <td align="right" style="padding:11px 14px 0 0;vertical-align:top;white-space:nowrap;border-top:1px solid #e2e8f0;"><span style="font-size:12px;color:#667386;">June 10, 2026 at 4:45 PM</span></td>
    </tr>
    <tr style="background:#fff;"><td colspan="3" style="padding:4px 14px 14px 34px;font-size:14px;color:#374151;line-height:1.5;"><p style="margin:0 0 12px;line-height:1.6;color:#334155;">Hey <span style="background:#f1f5f9;color:#475569;padding:1px 6px;border-radius:4px;font-weight:500;">@Dana Reed</span> — we should testify against this at Thursday's hearing. Can you pull the talking points?</p></td></tr>
  </tbody>
</table>
            <div style="margin-top:18px;"><a href="https://sample.test/RI/2026/HB 1234#comment-sample-comment" style="display:inline-block;background:#3b82f6;color:#fff;text-decoration:none;font-size:14px;font-weight:600;padding:12px 24px;border-radius:6px;">View comment</a></div>
          </td></tr>
          <tr><td style="padding:22px 20px 4px;border-top:1px solid #e2e8f0;text-align:center;">
            <a href="https://sample.test" style="font-size:12px;color:#667386;text-decoration:underline;">FloorVote</a>
          </td></tr>
        </tbody>
      </table>
    </td></tr></tbody>
  </table>
</body>
</html>"
`;

exports[`email conformance — every sample type shares the shell contract > week-ahead > matches its committed snapshot 1`] = `
"<!DOCTYPE html>
<html>
<head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head>
<body style="margin:0;padding:0;background:#f8fafc;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f8fafc;padding:32px 0;">
    <tbody><tr><td align="center">
      <table role="presentation" width="560" cellpadding="0" cellspacing="0" style="max-width:560px;width:100%;">
        <tbody>
          <tr><td style="padding:0 20px 18px;">
            
  <div style="margin-bottom:4px;font-size:18px;font-weight:800;letter-spacing:-0.02em;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;">
    <span style="color:#1e3a5f;">Floor</span><span style="color:#f59e0b;">Vote</span>
  </div>

            <p style="margin:0;font-size:12px;font-weight:600;color:#5e697d;">Rhode Island Association of Local Election Officials</p>
            <p style="margin:18px 0 0;font-size:18px;font-weight:700;color:#0f172a;line-height:1.35;">5 events in the week ahead</p>
            <p class="email-date" style="margin:2px 0 0;font-size:12px;color:#667386;">June 15 – June 19</p>
          </td></tr>
          <tr><td style="padding:6px 20px 28px;">
            
<h3 style="font-size:14px;font-weight:700;color:#0f172a;margin:16px 0 6px 0;padding-bottom:4px;border-bottom:1px solid #e2e8f0;">Monday, June 15</h3>
<a href="https://sample.test/calendar?focusEvent=ev1" style="text-decoration:none;color:inherit;display:block;">
  <div style="display:flex;align-items:flex-start;gap:8px;background:#fff;border:1px solid #e2e8f0;border-radius:8px;box-shadow:0 1px 3px rgba(0,0,0,0.04);margin-bottom:8px;padding:10px 12px;">
  <span title="Hearing" style="flex-shrink:0;display:inline-flex;align-items:center;justify-content:center;width:22px;height:22px;border-radius:6px;background:#eff6ff;margin-top:1px;"><img src="https://sample.test/email-icons/gavel__1e3a5f.png" width="14" height="14" alt="Hearing" style="display:block;border:0;"></span>
  <div style="flex:1;min-width:0;"><div style="font-size:12px;font-weight:600;color:#0f172a;">House Committee on State Government and Elections</div><div style="font-size:10px;color:#667386;margin-top:2px;"><img src="https://sample.test/email-icons/schedule__667386.png" width="14" height="14" alt="" style="display:inline-block;vertical-align:-2px;margin-right:4px;border:0;">9a</div><div style="font-size:10px;color:#667386;margin-top:2px;"><img src="https://sample.test/email-icons/location_on__667386.png" width="14" height="14" alt="" style="display:inline-block;vertical-align:-2px;margin-right:4px;border:0;">State House, Room 101</div><div style="display:flex;flex-wrap:wrap;margin-top:3px;"><span style="display:inline-flex;align-items:center;background:#1e3a5f;color:#fff;font-size:10px;font-weight:700;padding:2px 6px;border-radius:4px;letter-spacing:0.02em;margin-right:4px;margin-bottom:3px;">RI HB 1234<span title="High priority" style="display:inline-block;width:9px;height:9px;border-radius:2px;background:#850028;box-shadow:0 0 0 1.5px rgba(255,255,255,0.9);margin-left:6px;vertical-align:middle;flex-shrink:0;"></span></span><span style="display:inline-flex;align-items:center;background:#1e3a5f;color:#fff;font-size:10px;font-weight:700;padding:2px 6px;border-radius:4px;letter-spacing:0.02em;margin-right:4px;margin-bottom:3px;">RI HB 1240<span title="Medium priority" style="display:inline-block;width:9px;height:9px;border-radius:2px;background:#be2342;box-shadow:0 0 0 1.5px rgba(255,255,255,0.9);margin-left:6px;vertical-align:middle;flex-shrink:0;"></span></span></div></div>
</div></a><a href="https://sample.test/calendar?focusEvent=ev2" style="text-decoration:none;color:inherit;display:block;">
  <div style="display:flex;align-items:flex-start;gap:8px;background:#fff;border:1px solid #e2e8f0;border-radius:8px;box-shadow:0 1px 3px rgba(0,0,0,0.04);margin-bottom:8px;padding:10px 12px;">
  <span title="Hearing" style="flex-shrink:0;display:inline-flex;align-items:center;justify-content:center;width:22px;height:22px;border-radius:6px;background:#eff6ff;margin-top:1px;"><img src="https://sample.test/email-icons/gavel__1e3a5f.png" width="14" height="14" alt="Hearing" style="display:block;border:0;"></span>
  <div style="flex:1;min-width:0;"><div style="font-size:12px;font-weight:600;color:#0f172a;">Senate Judiciary Committee</div><div style="font-size:10px;color:#667386;margin-top:2px;"><img src="https://sample.test/email-icons/schedule__667386.png" width="14" height="14" alt="" style="display:inline-block;vertical-align:-2px;margin-right:4px;border:0;">2p</div><div style="font-size:10px;color:#667386;margin-top:2px;"><img src="https://sample.test/email-icons/location_on__667386.png" width="14" height="14" alt="" style="display:inline-block;vertical-align:-2px;margin-right:4px;border:0;">State House, Room 313</div><div style="display:flex;flex-wrap:wrap;margin-top:3px;"><span style="display:inline-flex;align-items:center;background:#1e3a5f;color:#fff;font-size:10px;font-weight:700;padding:2px 6px;border-radius:4px;letter-spacing:0.02em;margin-right:4px;margin-bottom:3px;">RI S 0456<span title="Low priority" style="display:inline-block;width:9px;height:9px;border-radius:2px;background:#c27a83;box-shadow:0 0 0 1.5px rgba(255,255,255,0.9);margin-left:6px;vertical-align:middle;flex-shrink:0;"></span></span></div></div>
</div></a>
<h3 style="font-size:14px;font-weight:700;color:#0f172a;margin:16px 0 6px 0;padding-bottom:4px;border-bottom:1px solid #e2e8f0;">Wednesday, June 17</h3>
<a href="https://sample.test/calendar?focusEvent=ev3" style="text-decoration:none;color:inherit;display:block;">
  <div style="display:flex;align-items:flex-start;gap:8px;background:#fff;border:1px solid #e2e8f0;border-radius:8px;box-shadow:0 1px 3px rgba(0,0,0,0.04);margin-bottom:8px;padding:10px 12px;">
  <span title="Custom event" style="flex-shrink:0;display:inline-flex;align-items:center;justify-content:center;width:22px;height:22px;border-radius:6px;background:#eff6ff;margin-top:1px;"><img src="https://sample.test/email-icons/calendar_today__3b82f6.png" width="14" height="14" alt="Custom event" style="display:block;border:0;"></span>
  <div style="flex:1;min-width:0;"><div style="font-size:12px;font-weight:600;color:#0f172a;">Association board meeting</div><div style="font-size:10px;color:#667386;margin-top:2px;"><img src="https://sample.test/email-icons/schedule__667386.png" width="14" height="14" alt="" style="display:inline-block;vertical-align:-2px;margin-right:4px;border:0;">12p</div><div style="font-size:10px;color:#667386;margin-top:2px;"><img src="https://sample.test/email-icons/location_on__667386.png" width="14" height="14" alt="" style="display:inline-block;vertical-align:-2px;margin-right:4px;border:0;">Zoom</div></div>
</div></a><a href="https://sample.test/calendar?focusEvent=ev4" style="text-decoration:none;color:inherit;display:block;">
  <div style="display:flex;align-items:flex-start;gap:8px;background:#fff;border:1px solid #e2e8f0;border-radius:8px;box-shadow:0 1px 3px rgba(0,0,0,0.04);margin-bottom:8px;padding:10px 12px;">
  <span title="Hearing" style="flex-shrink:0;display:inline-flex;align-items:center;justify-content:center;width:22px;height:22px;border-radius:6px;background:#eff6ff;margin-top:1px;"><img src="https://sample.test/email-icons/gavel__1e3a5f.png" width="14" height="14" alt="Hearing" style="display:block;border:0;"></span>
  <div style="flex:1;min-width:0;"><div style="font-size:12px;font-weight:600;color:#0f172a;">House Finance Committee</div><div style="font-size:10px;color:#667386;margin-top:2px;"><img src="https://sample.test/email-icons/location_on__667386.png" width="14" height="14" alt="" style="display:inline-block;vertical-align:-2px;margin-right:4px;border:0;">State House, Room 35</div><div style="display:flex;flex-wrap:wrap;margin-top:3px;"><span style="display:inline-flex;align-items:center;background:#1e3a5f;color:#fff;font-size:10px;font-weight:700;padding:2px 6px;border-radius:4px;letter-spacing:0.02em;margin-right:4px;margin-bottom:3px;">RI HB 1502<span title="High priority" style="display:inline-block;width:9px;height:9px;border-radius:2px;background:#850028;box-shadow:0 0 0 1.5px rgba(255,255,255,0.9);margin-left:6px;vertical-align:middle;flex-shrink:0;"></span></span></div></div>
</div></a>
<h3 style="font-size:14px;font-weight:700;color:#0f172a;margin:16px 0 6px 0;padding-bottom:4px;border-bottom:1px solid #e2e8f0;">Friday, June 19</h3>
<a href="https://sample.test/calendar?focusEvent=ev5" style="text-decoration:none;color:inherit;display:block;">
  <div style="display:flex;align-items:flex-start;gap:8px;background:#fff;border:1px solid #e2e8f0;border-radius:8px;box-shadow:0 1px 3px rgba(0,0,0,0.04);margin-bottom:8px;padding:10px 12px;">
  <span title="Custom event" style="flex-shrink:0;display:inline-flex;align-items:center;justify-content:center;width:22px;height:22px;border-radius:6px;background:#eff6ff;margin-top:1px;"><img src="https://sample.test/email-icons/calendar_today__3b82f6.png" width="14" height="14" alt="Custom event" style="display:block;border:0;"></span>
  <div style="flex:1;min-width:0;"><div style="font-size:12px;font-weight:600;color:#0f172a;">Quarterly staff training</div></div>
</div></a>
            <div style="margin-top:18px;"><a href="https://sample.test/calendar" style="display:inline-block;background:#3b82f6;color:#fff;text-decoration:none;font-size:14px;font-weight:600;padding:12px 24px;border-radius:6px;">View calendar</a></div>
          </td></tr>
          <tr><td style="padding:22px 20px 4px;border-top:1px solid #e2e8f0;text-align:center;">
            <a href="https://sample.test/api/calendar/feed.ics?token=sample" style="font-size:12px;color:#667386;text-decoration:underline;">Subscribe to your calendar</a> &nbsp;·&nbsp; <a href="https://sample.test/profile#setting-week-ahead" style="font-size:12px;color:#667386;text-decoration:underline;">Manage email settings</a>
          </td></tr>
        </tbody>
      </table>
    </td></tr></tbody>
  </table>
</body>
</html>"
`;
